fix tooltips appearing behind charts

--- a/assets/www/default.css
+++ b/assets/www/default.css
@@ -45,7 +45,8 @@ div.smoothie-chart-tooltip {
 	font-family: Consolas, monospace;
 	color: white;
 	font-size: 10px;
-	pointer-events: none;
+  pointer-events: none;
+  z-index: 4;
 }
 
 button {
